[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Spatial.gd" type="Script" id=2]
[ext_resource path="res://scenes/MenuPlane.gd" type="Script" id=3]
[ext_resource path="res://scenes/RayCast.gd" type="Script" id=4]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("MenuPlane/Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 4 )

[sub_resource type="PlaneMesh" id=6]

[sub_resource type="BoxShape" id=7]

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="VideoViewport" type="Viewport" parent="."]
size = Vector2( 2, 2 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="VideoPlayer" type="VideoPlayer" parent="VideoViewport"]
margin_right = 40.0
margin_bottom = 40.0
expand = false

[node name="FPController" parent="." instance=ExtResource( 1 )]

[node name="ARVRCamera" parent="FPController" index="1"]
far = 1000.0

[node name="LeftHandController" parent="FPController" index="2"]
visible = true

[node name="LeftHandMesh" type="MeshInstance" parent="FPController/LeftHandController" index="0"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.07, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="RayCast" type="Spatial" parent="FPController/LeftHandController" index="1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 4 )

[node name="LaserMesh" type="MeshInstance" parent="FPController/LeftHandController/RayCast"]
transform = Transform( 0.1, 0, 0, 0, -2.18557e-07, 0.1, 0, -5, -4.37114e-09, 0, 0, -5 )
mesh = SubResource( 2 )
skeleton = NodePath("../../LeftHandMesh")

[node name="RightHandController" parent="FPController" index="3"]
visible = true

[node name="RightHandMesh" type="MeshInstance" parent="FPController/RightHandController" index="0"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.07, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="RayCast" type="Spatial" parent="FPController/RightHandController" index="1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 4 )

[node name="LaserMesh" type="MeshInstance" parent="FPController/RightHandController/RayCast"]
transform = Transform( 0.1, 0, 0, 0, -2.18557e-07, 0.1, 0, -5, -4.37114e-09, 0, 0, -5 )
mesh = SubResource( 2 )
skeleton = NodePath("../../../LeftHandController/LeftHandMesh")

[node name="MenuPlane" type="MeshInstance" parent="."]
transform = Transform( 1.2, 8.35187e-23, -2.92058e-30, 0, -4.37114e-08, -0.8, -1.00222e-22, 1, -3.49691e-08, 0, 0, -1.5 )
material_override = SubResource( 5 )
mesh = SubResource( 6 )
skeleton = NodePath("")
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="MenuPlane"]
size = Vector2( 1200, 800 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="Menu" parent="MenuPlane/Viewport" instance=ExtResource( 5 )]

[node name="Area" type="Area" parent="MenuPlane"]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="MenuPlane/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 7 )

[connection signal="finished" from="VideoViewport/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="button_pressed" from="FPController/LeftHandController" to="." method="_on_LeftHandController_button_pressed"]
[connection signal="button_pressed" from="FPController/RightHandController" to="." method="_on_RightHandController_button_pressed"]

[editable path="FPController"]
